# ghost-buster

./: README.md  ghost-buster.cabal  run
src/Data/: SuchThat.hs
src/Data/SuchThat/: Example.hs
tests/: Spec.hs
