name:                ghost-buster
version:             0.1.0.0
homepage:            https://github.com/Lazersmoke/ghost-buster#readme
license:             BSD3
license-file:        LICENSE
author:              Lazersmoke
maintainer:          lazersmoke@gmail.com
copyright:           2017 Lazersmoke
category:            Data
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.SuchThat, Data.SuchThat.Example
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/Lazersmoke/ghost-buster
